--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,3 +44,20 @@ nav span:hover {
   opacity: 60%;
   transition: opacity 0.1s linear;
 }
+
+button {
+  cursor: pointer;
+  height: 2.5em;
+  width: 12em;
+  background-color: rgb(17, 255, 0);
+  border: none;
+  text-align: center;
+  border-radius: 5px;
+  transition: background-color 0.1s linear;
+  font-weight: bold;
+}
+
+button:hover {
+  background-color: rgb(13, 197, 0);
+  transition: background-color 0.1s linear;
+}
