Removed all styling

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-nav {
+/* nav {
   display: flex;
   justify-content: space-between;
   padding: 1em 2em;
@@ -61,3 +61,4 @@ button:hover {
   background-color: rgb(13, 197, 0);
   transition: background-color 0.1s linear;
 }
+ */
