--- a/frontend/src/css/ButtonLink.css
+++ b/frontend/src/css/ButtonLink.css
@@ -1,8 +1,8 @@
-button {
+.button-add {
     cursor: pointer;
     height: 2.5em;
     width: 12em;
-    background-color: rgb(17, 255, 0);
+    background-color: #40EB5D;
     border: none;
     text-align: center;
     border-radius: 5px;
@@ -10,8 +10,26 @@ button {
     font-weight: bold;
   }
   
-button:hover {
+.button-add:hover {
     background-color: rgb(13, 197, 0);
     transition: background-color 0.1s linear;
 }
+
+.button-edit {
+  cursor: pointer;
+  height: 2.5em;
+  width: 12em;
+  background-color: #FFF317;
+  border: none;
+  text-align: center;
+  border-radius: 5px;
+  transition: background-color 0.1s linear;
+  font-weight: bold;
+}
+
+.button-edit:hover {
+  background-color: #cfc505;
+  transition: background-color 0.1s linear;
+}
+
 
