--- a/frontend/src/css/ButtonLink.css
+++ b/frontend/src/css/ButtonLink.css
@@ -32,4 +32,20 @@
   transition: background-color 0.1s linear;
 }
 
+.button-back {
+  cursor: pointer;
+  height: 2.5em;
+  width: 12em;
+  background-color: #f2e5e5b1;
+  border: none;
+  text-align: center;
+  border-radius: 5px;
+  transition: background-color 0.1s linear;
+  font-weight: bold;
+}
+
+.button-back:hover {
+  background-color: #8e8383;
+  transition: background-color 0.1s linear;
+}
 
