--- a/frontend/src/css/ButtonLink.css
+++ b/frontend/src/css/ButtonLink.css
@@ -15,6 +15,7 @@
     transition: background-color 0.1s linear;
 }
 
+
 .button-edit {
   cursor: pointer;
   height: 2.5em;
@@ -49,3 +50,19 @@
   transition: background-color 0.1s linear;
 }
 
+.button-delete {
+  cursor: pointer;
+  height: 2.5em;
+  width: 12em;
+  background-color: #F66F61;
+  border: none;
+  text-align: center;
+  border-radius: 5px;
+  transition: background-color 0.1s linear;
+  font-weight: bold;
+}
+
+.button-delete:hover {
+  background-color: #ea3a26;
+  transition: background-color 0.1s linear;
+}
