--- a/frontend/src/css/Description.css
+++ b/frontend/src/css/Description.css
@@ -8,3 +8,13 @@
   resize: none;
   box-sizing: border-box;
 }
+
+.description-title textarea{
+    height: 2.5em;
+    width: 38em;
+  border-radius: 8px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  resize: none;
+  box-sizing: border-box;
+}
