Create login page

--- a/frontend/src/css/CreateAccountLogin.css
+++ b/frontend/src/css/CreateAccountLogin.css
@@ -25,6 +25,10 @@
   justify-content: center;
 }
 
+.createAccountLoginContainer .loginForm {
+  grid-template-columns: 1fr;
+}
+
 .formInputsContainer {
   display: flex;
   flex-direction: column;
