--- a/frontend/src/css/ButtonLink.css
+++ b/frontend/src/css/ButtonLink.css
@@ -66,3 +66,14 @@
   background-color: #ea3a26;
   transition: background-color 0.1s linear;
 }
+
+.button-cancel {
+  cursor: pointer;
+  height: 3em;
+  width: 12em;
+  background-color: #ff200bfa;
+  border: none;
+  text-align: center;
+  border-radius: 5px;
+  font-weight: bold;
+}
