--- a/frontend/src/css/ExperienceTile.css
+++ b/frontend/src/css/ExperienceTile.css
@@ -41,9 +41,9 @@
 }
 
 .image img {
-    width: 100%; /* Ensure the image fills the container */
-    height: 100%; /* Ensure the image fills the container */
-    object-fit: cover; /* Preserve aspect ratio and avoid stretching */
+    width: 100%; 
+    height: 100%;
+    object-fit: cover; 
 }
 
 .rating{
