--- a/frontend/src/css/ButtonLink.css
+++ b/frontend/src/css/ButtonLink.css
@@ -17,7 +17,6 @@
     transition: background-color 0.1s linear;
 }
 
-
 .button-edit {
   cursor: pointer;
   height: 2.5em;
@@ -72,10 +71,18 @@
 .button-cancel {
   cursor: pointer;
   height: 3em;
+  font-size: 1em;
+  font-weight: bold;
   width: 12em;
-  background-color: #ff200bfa;
+  background-color: #FA4032;
   border: none;
   text-align: center;
   border-radius: 5px;
+  transition: background-color 0.1s linear;
   font-weight: bold;
+}
+
+.button-cancel:hover {
+  background-color: rgb(221, 5, 5);
+  transition: background-color 0.1s linear;
 }
