--- a/frontend/src/css/MyTrips.css
+++ b/frontend/src/css/MyTrips.css
@@ -2,12 +2,8 @@
     max-height: 700px;
     max-width: 1300px;
     overflow-y: auto;
-    /* /* margin-top: 0px; */
-    /* margin-right: 100px; */
     margin-left: 250px;
     padding: 30px;
-    /* background: rgba(255, 166, 0, 0.315); */
-    
 }
 
 .add-trip-button {
@@ -21,6 +17,7 @@
 .trip-page-title {
     position: absolute;
     left: 770px;
+    top: 75px;
     display: flex;
     padding: 20px;
     font-size: 60px;
@@ -31,12 +28,12 @@
     max-height: 700px;
     max-width: 1300px;
     overflow-y: auto;
-    margin-top: 70px;
+    margin-top: 65px;
     margin-left: 250px;
     padding: 30px;
     position: relative;
 }
 
 .vertical-gradient-bg {
-    background: linear-gradient(to bottom, #3498db, #2ecc71); /* top-to-bottom gradient */
+    background: linear-gradient(to bottom, #3498db, #2ecc71);
 }
