--- a/frontend/src/css/ExperienceTile.css
+++ b/frontend/src/css/ExperienceTile.css
@@ -25,7 +25,8 @@
     padding-right: 20px;
 }
 
-.title {
+.experience-details .title {
+    text-align: left;
     font-size: 26px;
     margin: 0;
 }
