--- a/frontend/src/css/TripButtons.css
+++ b/frontend/src/css/TripButtons.css
@@ -16,17 +16,17 @@
     color: #f3f0f0;
 }
 
-
 .SaveTrip{
     cursor: pointer;
     height: 3em;
     width: 12em;
-    background-color: #0ee231;
-    border: none;
-    text-align: center;
-    border-radius: 5px;
-    transition: background-color 0.1s linear;
+    font-size: 1em;
     font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    background-color: #0ee231;
+    text-align: center;
+    transition: background-color 0.1s linear;
 }
 
 .SaveTrip.disabled{
