--- a/frontend/src/css/TripButtons.css
+++ b/frontend/src/css/TripButtons.css
@@ -1,22 +1,5 @@
-.SaveChanges {
-    cursor: pointer;
-    height: 3em;
-    width: 12em;
-    background-color: #0ee231;
-    border: none;
-    text-align: center;
-    border-radius: 5px;
-    transition: background-color 0.1s linear;
-    font-weight: bold;
-}
-
-.SaveChanges.disabled{
-    background-color: #ccc;
-    cursor: not-allowed;
-    color: #f3f0f0;
-}
-
-.SaveTrip{
+.save-changes,
+.save-trip{
     cursor: pointer;
     height: 3em;
     width: 12em;
@@ -29,7 +12,8 @@
     transition: background-color 0.1s linear;
 }
 
-.SaveTrip.disabled{
+.save-changes.disabled,
+.save-trip.disabled{
     background-color: #ccc;
     cursor: not-allowed;
     color: #f3f0f0;
