--- a/frontend/src/css/MyExperiences.css
+++ b/frontend/src/css/MyExperiences.css
@@ -1,13 +1,9 @@
 .experiences-container {
-    max-height: 700px;
-    max-width: 1300px;
+    margin: 0 250px;
     overflow-y: auto;
-    /* /* margin-top: 0px; */
-    /* margin-right: 100px; */
-    margin-left: 250px;
     padding: 30px;
-    /* background: rgba(255, 166, 0, 0.315); */
-    
+    background: rgba(255, 255, 255, 0.8);
+    flex-grow: 1;
 }
 
 /* Add experience button */
