--- a/frontend/src/css/IndividualExperience.css
+++ b/frontend/src/css/IndividualExperience.css
@@ -68,3 +68,30 @@
     gap: 10px;                    
   }
   
+.add-to-trip-container select{
+    width: 300px; /* Set the width */
+    height: 50px; 
+    font-size: 1.2rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: left;
+    border: 2px solid #d3d3d3;
+    background-color: #f4f4f4;
+    padding: 10px;
+    border-radius: 5px;
+    color: #333;
+}  
+
+.add-to-trip-container button {
+    width: 300px; /* Set the width */
+    height: 50px; 
+    font-size: 1.2rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    border: 2px solid #d3d3d3;
+    background-color: #f4f4f4;
+    padding: 10px;
+    border-radius: 5px;
+    color: #333;
+}
