--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -8,12 +8,15 @@
 }
 
 .bgImage {
-  height: 100%;
+  min-height: 100vh;
+  width: 100vw;
+  margin: 0;
   background-color: rgba(158, 210, 253, 0.2);
   background-image: url("../assets/background.png");
   background-blend-mode: lighten;
   background-repeat: no-repeat;
-  background-position-y: 6em;
+  background-size: cover;
+  background-position: center;
   display: flex;
   flex-direction: column;
 }
