--- a/frontend/src/css/IndividualExperience.css
+++ b/frontend/src/css/IndividualExperience.css
@@ -19,20 +19,21 @@
 .row-container { 
     display: flex;
     flex-direction: row;
-    justify-content: space-between; 
-    width: 100%; 
+    /* justify-content: space-between;  */
+    width: 95%; 
     gap: 20px; 
 }
 
 .left-container {
     padding: 10px;
-    width: 50%;                  
+    width: 40%;   
+    /* height: 100%;                */
     flex-shrink: 0;              
   }
   
 .left-container img {
     width: 100%;               
-    height: 100%;
+    height: 80%;
     object-fit: cover;         
     align-self: left;
     border-radius: 4%;
@@ -40,7 +41,7 @@
   
 .right-container {
     padding: 10px;
-    width: 80%;               
+    width: 60%;               
     align-items: center;
 }
 
@@ -116,4 +117,23 @@
     gap: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
+}
+.back-button-container {
+    margin-top: 20px;
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: flex-start; 
+    gap: 200px;
+}
+
+.back-button-container button{
+    width: 80px; 
+    height: 50px; 
+    font-size: 1.2rem;
+    text-align: center;
+    border: 2px solid #d3d3d3;
+    background-color: #ebc67c;
+    padding: 10px;
+    border-radius: 5px;
+    color: #333;
 }
