--- a/frontend/src/css/MyTrips.css
+++ b/frontend/src/css/MyTrips.css
@@ -1,26 +1,30 @@
-.add-trip-button {
-    position: absolute;
-    bottom: 65px;          
-    left: 20px;
-    display: flex;
-    padding: 20px;
+.trip-page-header {
+    text-align: center;
+    margin: 20px auto;
 }
-
-.trip-page-title {
-    position: absolute;
-    left: 770px;
-    top: 75px;
-    display: flex;
-    padding: 20px;
-    font-size: 60px;
+  
+.trip-page-header h1 {
+    font-size: 2.5rem;
+    color: #2c3e50;
+    margin-bottom: 10px;
 }
-
+  
+.trip-page-header .button-add {
+    margin-top: 10px;
+}
+  
+.trip-page-header .button-add:hover {
+    background-color: #ffa84b;
+}
+  
 .trips-container {
-    margin: 65px 250px 0px 250px;
-    overflow-y: auto;
-    padding: 30px;
-}
-
-.vertical-gradient-bg {
-    background: linear-gradient(to bottom, #3498db, #2ecc71);
+    width: 70%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f9e8d1;
+    border-radius: 15px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
