--- a/frontend/src/css/TripTile.css
+++ b/frontend/src/css/TripTile.css
@@ -1,13 +1,10 @@
 .trip-tile {
-    display: flex; 
-    align-items: center; 
-    height: 80px;
-    margin-bottom: 20px;
+    padding: 15px;
     border: 1px solid #ccc;
-    padding: 10px;
-    border-radius: 5px;
+    border-radius: 20px;
     background-color: #f9f9f9;
-    padding-right:25px;
+    transition: background-color 0.4s ease-in-out;
+    position: relative;
 }
 
 .trip-tile:hover {
@@ -15,49 +12,44 @@
     cursor: pointer;
 }
 
-.trip-details {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex-grow: 1; 
-    padding-right: 20px;
-}
-
-.title {
-    font-size: 40px;
-    margin: 0;
-    text-align: center;
+.trip-tile h2 {
+    font-size: 2.2rem;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .button-container {
     display: flex;
-    flex-direction: column; 
-    gap:15px;
+    gap: 10px;
+    justify-content: flex-end;
 }
 
-.button-container button{
-    cursor: pointer;
-    height: 6m;
-    border: none;
-    text-align: center;
-    border-radius: 5px;
-    font-size: 1em;
-    padding: 8px 12px;
-    font-weight: bold;
+.edit button {
+  background-color: #4caf50;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-.button-container .delete button {
-    background-color: #FA4032; 
+.edit button:hover {
+  color: white;
 }
 
-.button-container .delete button:hover {
-    background-color: #e1231f; 
+.delete button {
+  background-color: #f44336;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-.button-container .edit button {
-    background-color: #e7cfb0; 
-}
-
-.button-container .edit button:hover {
-    background-color: #e19c41; 
+.delete button:hover {
+  color: rgb(255, 255, 255);
 }
