--- a/frontend/src/css/TripTile.css
+++ b/frontend/src/css/TripTile.css
@@ -33,7 +33,7 @@
 }
 
 .edit button {
-  background-color: #4caf50;
+  background-color: #e7cfb0;
   border: none;
   padding: 8px 12px;
   border-radius: 5px;
