Css fixes for create and edit experiences

--- a/frontend/src/css/Description.css
+++ b/frontend/src/css/Description.css
@@ -43,6 +43,7 @@
   font-weight: bold;
 }
 
+.create-experience-title-container,
 .create-title-container,
 .create-description-container,
 .edit-title-container,
