--- a/frontend/src/css/ButtonLink.css
+++ b/frontend/src/css/ButtonLink.css
@@ -4,7 +4,7 @@
     font-size: 1em;
     font-weight: bold;
     width: 12em;
-    background-color: #FA812F;
+    background-color: #7dff03;
     border: none;
     text-align: center;
     border-radius: 5px;
@@ -13,7 +13,7 @@
   }
 
 .button-add:hover {
-    background-color: rgb(13, 197, 0);
+    background-color: rgb(16, 116, 9);
     transition: background-color 0.1s linear;
 }
 
@@ -83,6 +83,23 @@
 }
 
 .button-cancel:hover {
+  background-color: rgb(221, 5, 5);
+  transition: background-color 0.1s linear;
+}
+
+.button-back-experience {
+  cursor: pointer;
+  height: 4em;
+  width: 14em;
+  background-color:  #FA4032;
+  border: none;
+  text-align: center;
+  border-radius: 5px;
+  transition: background-color 0.1s linear;
+  font-weight: bold;
+}
+
+.button-back-experience:hover {
   background-color: rgb(221, 5, 5);
   transition: background-color 0.1s linear;
 }
