--- a/frontend/src/css/AddToExperienceButton.css
+++ b/frontend/src/css/AddToExperienceButton.css
@@ -9,6 +9,7 @@
     color: black;
     border: 1px solid #ccc;
     border-radius: 5px;
+    font-weight: bold;
     font-size: 1rem;
 }
   
@@ -20,6 +21,7 @@
     padding: 10px 20px;
     border-radius: 5px;
     font-size: 1rem;
+    font-weight: bold;
     transition: background-color 0.3s ease-in-out, opacity 0.3s ease-in-out;
 }
 
